Fixed photography jumping bug

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -13,6 +13,9 @@
 }
 .nav ul li:last-child{
     margin-right:0px;
+    border-radius: 5px;
+    border:1px solid #333;
+    padding:0px 6px;
 }
 .nav ul li a{
     color:#333;
