--- a/src/app/photography/photography.component.css
+++ b/src/app/photography/photography.component.css
@@ -57,6 +57,7 @@
 
 /* lightbox close button */
 :target .close-lightbox{
+    display:block;
     position: absolute;
     top:10px;
     right:10px;
